--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body
   
 }
 
-	
-}
 .container
 {
     margin-top: 2%;
@@ -59,7 +57,7 @@ body
 	height:59%;
 	border-radius:25%;
 	position:absolute;
-	top=-50px;
+	top:-50px;
 	left:50%;
 	transform:translateX(-50%);
 }
@@ -87,7 +85,7 @@ body
 	margin:20px;
 	background:rgb(214,214,214);
 	border:none;
-	border-radius:25px:
+	border-radius:25px;
 	
 	color:green;
 	font-size:15px;
@@ -103,7 +101,7 @@ body
   
 
 /* Full-width input fields */
-  input[type=text],  {
+  input[type=text]  {
   width: 25%;
   padding: 15px;
   margin: 5px 22px 0;
@@ -112,7 +110,7 @@ body
   background: #f1f1f1;
 }
 
-input[type=text]:focus,  {
+input[type=text]:focus  {
   background-color: #ddd;
   outline: none;
 }
