--- a/services.css
+++ b/services.css
@@ -87,7 +87,7 @@ body
 	margin:20px;
 	background:rgb(214,214,214);
 	border:none;
-	border-radius:25px:
+	border-radius:25px;
 	
 	color:green;
 	font-size:15px;
