--- a/home.css
+++ b/home.css
@@ -335,3 +335,23 @@ h4 {
   right:0;
 
 }
+
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .jumbotron{
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  }
+}
+@media (max-width: 576px) {
+  .jumbotron{
+    padding-bottom: 100px;
+    padding-top: 100px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+
+}
