--- a/styleab.css
+++ b/styleab.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    padding: 18px;
+    /* padding: 18px; */
     background: #fff;
     font-family: sans-serif;
 	overflow-x:hidden;
@@ -15,9 +15,11 @@ h1{
     font-family: sans-serif;
 }
 .psize{
-	display:flex;
+    display:flex;
+
+    margin:auto ;
 }
-.container
+/* .container
 {
     position: relative;
     width: 400px;
@@ -27,21 +29,20 @@ h1{
     float: left;
     margin:100px;
     box-sizing:border-box;
-  /*  display: flex;*/
     
-}
+} */
  
- .container-md, .container-sm{
+ /* .container-md, .container-sm{
 	 max-width:500px;
- }
+ } */
 .box1{
     position: relative;
     border-radius: 3px;
     border-color: aqua;
     display: block;
-    width: 500px;
+    /* width: 500px;
     height: 400px;
-   max-width:500px;
+   max-width:500px; */
     background: #000;
     box-sizing: border-box;
 
@@ -55,15 +56,17 @@ h1{
     padding:8px;
 }
  .sliders{
-    width: 500px;
-    height: 300px;
+    /* width: 500px;
+    height: 300px; */
     border-radius: 10px;
     background: url(1.jpg);
-  padding-right:281px;
-     margin-top: 200px;
+  /* padding-right:281px;
+     margin-top: 200px; */
 	overflow-x:hidden;
   animation: slide 15s infinite;
-     
+     background-size: cover;
+     background-repeat: no-repeat;
+     margin: auto;
     
 }
 @keyframes slide{
@@ -78,5 +81,14 @@ h1{
     }
     100%{
         background: url(1.jpg);
+    }
+}
+@media (max-width: 576px) {
+    #box1{
+        width: 100%;
+    }
+    .sliders{
+        width: 100%;
+        height: 400px;
     }
 }
