--- a/services.css
+++ b/services.css
@@ -7,12 +7,10 @@ body
     font-family: 'Josetin Sans',sans-serif;
   
 }
-
-	
-}
 .container
 {
-    margin-top: 2%;
+	margin-top:2%;
+	
 }
 
 .team
@@ -24,12 +22,6 @@ body
   text-align: center;
 }
 	
-  
-
-
-	
-
-
 .farm3
 {
    
@@ -63,6 +55,10 @@ body
 	left:50%;
 	transform:translateX(-50%);
 }
+.responsive {
+  width: 100%;
+  height: auto;
+}
 .img_farm3 img
 {
     width: 50%;
@@ -76,8 +72,8 @@ body
     background: #fff;
 }
 .img_farm3 img{
-    width: 264px;
-    height: 180px;
+    width:50%;
+    height: 50%;
     background: #fff;
 }
 .btn
@@ -87,7 +83,7 @@ body
 	margin:20px;
 	background:rgb(214,214,214);
 	border:none;
-	border-radius:25px;
+	border-radius:25px:
 	
 	color:green;
 	font-size:15px;
