--- a/styleab.css
+++ b/styleab.css
@@ -84,11 +84,61 @@ h1{
     }
 }
 @media (max-width: 576px) {
-    #box1{
-        width: 100%;
+    
+	.box1{
+        min-width: 100%;
+		padding:auto;
+		float:left;
+		padding-right:20px;
     }
     .sliders{
-        width: 100%;
+        min-width:: 100%;
         height: 400px;
+		padding:auto;
+		float:left;
     }
+}
+@media (min-width: 768px) and (max-width: 992px){
+	.box1{
+        width: 50%;
+		float:left;
+		padding:auto;
+		margin-right:20px;
+    }
+	.box1 p{
+		font-size:20px;
+	}
+    .sliders{
+        width: 50%;
+        height: 400px;
+		float:left;
+		padding:auto;
+    }
+}
+@media (min-width: 576px) and (max-width: 768px){
+	.box1{
+        min-width: 100%;
+		float:left;
+		padding:2%;
+    }
+    .sliders{
+        min-width: 100%;
+        height: 400px;
+		float:left;
+		padding:2%;
+    }
+}
+
+@media (min-width: 992px) { 
+.box1{
+       min-width: 100%;
+	   float:left;
+	   padding:auto;
+    }
+    .sliders{
+        min-width: 100%;
+        height: 400px;
+		float:left;
+		padding:auto;
+}
 }
