--- a/style.css
+++ b/style.css
@@ -19,8 +19,10 @@ body{
     background-color: #ffffff;
     float: left;
     width: 100%;
-    
+  
+     
 }
+
 .team h1{
     font-size: 36px;
     font-family: open sans;
@@ -32,18 +34,19 @@ body{
 }
 .team .card{
     width: 25%;
-    height: 50%;
-    float: left;
-    padding: 0px 15px;
-    
-}
+    height: 650px;
+	float:left;
+	padding:0px 15px;
+	background-image: linear-gradient(170deg,#ffffff,#78b122);
+} 
 .team .card .box {
     padding: 15px;
    background-color: #ffffff;
     background-image: linear-gradient(170deg,#ffffff,#78b122);
     position: relative;
     border-radius: 5px;
-    transition: margin 1s ease,box-shadow 1s ease;
+	transition: margin 1s ease,box-shadow 1s ease;
+
 }
 .team .card .box:hover{
     margin-top: -15px;
@@ -86,6 +89,8 @@ body{
     .team .card{
         width: 50%;
         margin-bottom: 30px;
+		height:550px;
+	
     }
 }
 @media(max-width: 768px){
@@ -93,11 +98,20 @@ body{
    .team .card{
         min-width: 100%;
         margin-bottom: 30px;
-	
+	    min-height:100%;
     }
 }
 @media(max-width: 550px){
     .team .card{
         width: 100%;
+		height:100%;
+    }
+}
+	@media(max-width: 1200px){
+    .team .card{
+        width: 50%;
+        margin-bottom: 30px;
+		height:450px;;
+	
     }
 }
