--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 .team{
-    min-height: 100vh;
+    /* min-height: 100vh; */
     padding: 60px 15px;
     background-color: #ffffff;
     float: left;
@@ -32,20 +32,21 @@ body{
 }
 .team .card{
     width: 25%;
-    height: 50%;
+    /* height: 50%; */
     float: left;
+    background-color: #78b122;
+
     padding: 0px 15px;
     
 }
 .team .card .box {
     padding: 15px;
-   background-color: #ffffff;
-    background-image: linear-gradient(170deg,#ffffff,#78b122);
+    background-color: #78b122;
     position: relative;
     border-radius: 5px;
     transition: margin 1s ease,box-shadow 1s ease;
 }
-.team .card .box:hover{
+.team .card :hover{
     margin-top: -15px;
     box-shadow: 0px 0px 40px #538742;
 }
