--- a/styleab.css
+++ b/styleab.css
@@ -92,7 +92,7 @@ h1{
 		padding-right:20px;
     }
     .sliders{
-        min-width:: 100%;
+        min-width: 100%;
         height: 400px;
 		padding:auto;
 		float:left;
@@ -140,5 +140,14 @@ h1{
         height: 400px;
 		float:left;
 		padding:auto;
+}
+.vision-part{
+    margin-top: 100px;
+}
+.vision{
+    margin-top: 80px;
+}
+.vision-desc{
+    font-size: 25px;
 }
 }
