--- a/css/product.css
+++ b/css/product.css
@@ -168,6 +168,35 @@ li{
 		margin: auto;
 		padding:0px 50px;
 	}
+	.agri-head{
+		margin-top: 120px;
+		text-align: center;
+		margin-bottom: 80px;
+	}
+	.prod-image{
+		max-width: 100%;
+		max-width: 100%;
+	}
+	.prod-card{
+		background-color: #2f2e41;
+		padding: 60px;
+		margin:50px 50px 30px;
+		color: #fff;
+		font-weight: 500;
+		width: 100%;
+	}
+	.air-pdt{
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+	.welcome-image{
+		margin-left: auto;
+		margin-right: auto;
+		margin: 30px;
+	}
+	.air-prod{
+		padding: 30px;
+	}
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -228,6 +257,28 @@ li{
 	.air-image{
 		margin: auto;
 		/* padding: 50px; */
+	}
+	.agri-head{
+		margin-top: 120px;
+		text-align: center;
+		margin-bottom: 80px;
+	}
+	.prod-image{
+		max-width: 100%;
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+	.prod-card{
+		background-color: #2f2e41;
+		padding: 60px;
+		color: #fff;
+		font-weight: 500;
+		min-width: 100%;
+		margin: 30px;
+	}
+	.air-pdt{
+		margin-top: auto;
+		margin-bottom: auto;
 	}
  }
 
@@ -291,6 +342,7 @@ li{
 	.section-button{
 		margin: 50px;
 	}
+
  }
 
  /* Extra large devices (large desktops, 1200px and up) */
@@ -356,6 +408,36 @@ li{
 		font-weight: 500;
 	}
 	.air-pdt{
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+ }
+
+ @media (min-width: 768px) and (max-width: 1190px){
+
+	.agri-head{
+		margin-top: 120px;
+		text-align: center;
+		margin-bottom: 80px;
+	}
+	.prod-image{
+		/* max-width: 100%; */
+		padding: 70px;
+	}
+	.prod-card{
+		background-color: #2f2e41;
+		padding: 30px;
+		color: #fff;
+		font-weight: 500;
+		min-width: 100%;
+		/* margin-top: 30px; */
+		/* margin-bottom: 30px; */
+	}
+	.air-pdt{
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+	.prod-detail{
 		margin-top: auto;
 		margin-bottom: auto;
 	}
