--- a/services.css
+++ b/services.css
@@ -3,15 +3,11 @@ body
    
     background-size: cover;
     background-position: center;
-    background: #81c644;
+    /* background: #81c644; */
     font-family: 'Josetin Sans',sans-serif;
   
 }
-.container
-{
-	margin-top:2%;
-	
-}
+
 
 .team
 {
@@ -51,7 +47,7 @@ body
 	height:59%;
 	border-radius:25%;
 	position:absolute;
-	top=-50px;
+	top:-50px;
 	left:50%;
 	transform:translateX(-50%);
 }
@@ -83,7 +79,7 @@ body
 	margin:20px;
 	background:rgb(214,214,214);
 	border:none;
-	border-radius:25px:
+	border-radius:25px;
 	
 	color:green;
 	font-size:15px;
@@ -99,7 +95,7 @@ body
   
 
 /* Full-width input fields */
-  input[type=text],  {
+  input[type=text] {
   width: 25%;
   padding: 15px;
   margin: 5px 22px 0;
@@ -108,7 +104,7 @@ body
   background: #f1f1f1;
 }
 
-input[type=text]:focus,  {
+input[type=text]:focus  {
   background-color: #ddd;
   outline: none;
 }
