--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 .team{
-    /* min-height: 100vh; */
+    min-height: 100vh;
     padding: 60px 15px;
     background-color: #ffffff;
     float: left;
@@ -22,9 +22,7 @@ body{
   
      
 }
-.head{
-    margin-top: 10%;
-}
+
 .team h1{
     font-size: 36px;
     font-family: open sans;
@@ -36,24 +34,21 @@ body{
 }
 .team .card{
     width: 25%;
-    /* height: 50%; */
-    float: left;
-    background-color: #78b122;
-
-    padding: 5px 5px 5px 5px;
-    
-}
-
-.team .card  {
+    height: 700px;
+	float:left;
+	padding:0px 15px;
+	background-image: linear-gradient(170deg,#ffffff,#78b122);
+} 
+.team .card .box {
     padding: 15px;
-    background-color: #78b122;
+   background-color: #ffffff;
+    background-image: linear-gradient(170deg,#ffffff,#78b122);
     position: relative;
     border-radius: 5px;
 	transition: margin 1s ease,box-shadow 1s ease;
-    margin: 5px 5px 5px 15px;
 
 }
-.team .box .card :hover{
+.team .card .box:hover{
     margin-top: -15px;
     box-shadow: 0px 0px 40px #538742;
 }
@@ -92,31 +87,32 @@ body{
 }
 @media(max-width: 991px){
     .team .card{
-        width: 100%;
+        width: 50%;
         margin-bottom: 30px;
-		/* height:550px; */
+		height:600px;
 	
     }
 }
 @media(max-width: 768px){
 
    .team .card{
-        width: 100%;
+        min-width: 100%;
         margin-bottom: 30px;
-	    min-height:100%;
+	    height:100%;
     }
 }
-@media(max-width: 500px){
+@media(max-width: 550px){
     .team .card{
         width: 100%;
-		/* height:100%; */
+		height:100%;
+		margin-bottom:30px;
     }
 }
-	@media(max-width: 1200px){
+	@media(min-width: 992px)and (max-width:1200px){
     .team .card{
-        width: 100%;
+        width: 50%;
         margin-bottom: 30px;
-		/* height:450px;; */
+		height:450px;;
 	
     }
 }
