--- a/home.css
+++ b/home.css
@@ -336,7 +336,10 @@ h4 {
   right:0;
 
 }
-
+.video-div {
+  width: 40%;
+  height: 30%;
+}
 
 @media (min-width: 576px) and (max-width: 768px) {
   .jumbotron{
@@ -344,6 +347,10 @@ h4 {
   padding-right: 30px;
   padding-top: 120px;
   padding-bottom: 120px;
+  }
+  .video-div {
+    width: 70%;
+    height: 60%;
   }
 }
 @media (max-width: 576px) {
@@ -353,6 +360,11 @@ h4 {
     padding-left: 30px;
     padding-right: 30px;
   }
+  .video-div {
+    width: 70%;
+    height: 60%;
+  }
 
 
 }
+
