--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body{
     height: 700px;
 	float:left;
 	padding:0px 15px;
-	background-image: linear-gradient(170deg,#ffffff,#78b122);
+    /* background-image: linear-gradient(170deg,#ffffff,#78b122); */
+    border: none;
 } 
 .team .card .box {
     padding: 15px;
@@ -46,7 +47,8 @@ body{
     position: relative;
     border-radius: 5px;
 	transition: margin 1s ease,box-shadow 1s ease;
-
+    height: 600px;
+    border: none;
 }
 .team .card .box:hover{
     margin-top: -15px;
@@ -83,36 +85,48 @@ body{
     font-weight: 400;
     line-height: 24px;
     text-align: center;
-    padding: 0px 20px;
+    padding: 0% 7%;
 }
-@media(max-width: 991px){
+@media (min-width: 768px)and(max-width: 991px){
     .team .card{
         width: 50%;
-        margin-bottom: 30px;
+        /* margin-bottom: 30px; */
 		height:600px;
 	
     }
+    .team .card .box{
+        height: 400px;
+    }
 }
-@media(max-width: 768px){
+@media(min-width: 550px)and (max-width: 768px){
 
    .team .card{
         min-width: 100%;
-        margin-bottom: 30px;
+        /* margin-bottom: 30px; */
 	    height:100%;
+    }
+    .team .card .box{
+        height: 400px;
     }
 }
 @media(max-width: 550px){
     .team .card{
         width: 100%;
 		height:100%;
-		margin-bottom:30px;
+		/* margin-bottom:30px; */
+    }
+    .team .card .box{
+        height: 400px;
     }
 }
 	@media(min-width: 992px)and (max-width:1200px){
     .team .card{
-        width: 50%;
-        margin-bottom: 30px;
+        /* width: 50%; */
+        /* margin-bottom: 30px; */
 		height:450px;;
 	
     }
+}
+.outer-box{
+    border: none;
 }
