--- a/css/product.css
+++ b/css/product.css
@@ -116,6 +116,7 @@ li{
     background-color: #2d2d30;
     color: #f5f5f5;
     padding: 32px;
+    font-weight: 400;
   }
   
   .footer a {
@@ -123,9 +124,10 @@ li{
   }
   
   .footer a:hover {
-    color: #777;
+    color: #538742;
     text-decoration: none;
   }
+
 /* Small devices (landscape phones, 576px and up)*/
 @media (max-width: 576px) { 
 	.buy-btn{
@@ -141,7 +143,7 @@ li{
 	}
 	.air-description{
 		font-size: 20px;
-		padding: 20px;
+		padding: 0px;
 	}
 	.air-head{
 		font-size: 30px;
@@ -162,7 +164,7 @@ li{
 		margin-bottom: auto;
 	}
 	.air-head{
-		font-size: 70px;
+		font-size: 60px;
 		color: #78b122;
 		font-family: 'Bebas Neue', cursive;
 		font-style: normal;
@@ -171,23 +173,32 @@ li{
 		/* margin-left: 30px; */
 	}
 	.section-description{
-		font-family: 'Bebas Neue', cursive;
-		font-size: 20px;
-		font-weight: 100;
+		font-size: 15px;
+		font-weight: 400;
 		text-align: center;
 		padding: 0px 40px;
 	}
 	.section-button{
-		margin: 15px;
+		margin: 0 auto;
+		width: 165px;
+		font-size: x-small;
+		font-weight: 600;
+	}
+	.section-button1{
+		margin: 0 auto;
+		width: 125px;
+		font-size: x-small;
+		color: #2f2e41;
+		font-weight: 600;
 	}
 	.air-image{
 		margin: auto;
-		padding:0px 50px;
+		padding:0px 30px;
 	}
 	.agri-head{
-		margin-top: 120px;
+		margin-top: 70px;
 		text-align: center;
-		margin-bottom: 80px;
+		margin-bottom: 70px;
 	}
 	.prod-image{
 		max-width: 100%;
@@ -205,13 +216,21 @@ li{
 		margin-top: auto;
 		margin-bottom: auto;
 	}
-	.welcome-image{
+	.welcome-img{
 		margin-left: auto;
 		margin-right: auto;
-		margin: 30px;
+		width: 200px;
+	}
+	.welcome-img2{
+		margin-left: auto;
+		margin-right: auto;
+		width:140px;
 	}
 	.air-prod{
 		padding: 30px;
+	}
+	.logo{
+		width: 140px;
 	}
 }
 
@@ -263,8 +282,7 @@ li{
 		/* margin-left: 30px; */
 	}
 	.section-description{
-		font-family: 'Bebas Neue', cursive;
-		font-size: 25px;
+		font-size: 18px;
 		text-align: center;
 	}
 	.section-button{
@@ -295,6 +313,9 @@ li{
 	.air-pdt{
 		margin-top: auto;
 		margin-bottom: auto;
+	}
+	.logo{
+		width: 160px;
 	}
  }
 
@@ -351,12 +372,13 @@ li{
 		/* margin-left: 30px; */
 	}
 	.section-description{
-		font-family: 'Bebas Neue', cursive;
-		font-size: 30px;
+		font-size: 20px;
 		text-align: center;
 	}
 	.section-button{
 		margin: 50px;
+	}.logo{
+		width: 160px;
 	}
 
  }
@@ -393,7 +415,7 @@ li{
 		margin-bottom: auto;
 	}
 	.air-head{
-		font-size: 150px;
+		font-size: 100px;
 		color: #78b122;
 		font-family: 'Bebas Neue', cursive;
 		font-style: normal;
@@ -401,8 +423,7 @@ li{
 		margin-left: 30px;
 	}
 	.section-description{
-		font-family: 'Bebas Neue', cursive;
-		font-size: 30px;
+		font-size: 25px;
 	}
 	.section-button{
 		margin: 50px;
@@ -426,6 +447,9 @@ li{
 	.air-pdt{
 		margin-top: auto;
 		margin-bottom: auto;
+	}
+	.logo{
+		width: 180px;
 	}
  }
 
@@ -456,5 +480,8 @@ li{
 	.prod-detail{
 		margin-top: auto;
 		margin-bottom: auto;
+	}
+	.logo{
+		width: 180px;
 	}
  }
