--- a/css/servicestyle.css
+++ b/css/servicestyle.css
@@ -26,12 +26,14 @@
   }
 
 
+
   .footer {
     position: relative;
     top: -100px;
     background-color: #2d2d30;
     color: #f5f5f5;
     padding: 32px;
+    font-weight: 400;
   }
   
   .footer a {
@@ -39,6 +41,6 @@
   }
   
   .footer a:hover {
-    color: #777;
+    color: #538742;
     text-decoration: none;
   }
