--- a/styleab.css
+++ b/styleab.css
@@ -7,7 +7,23 @@ body{
 
 	
 }
-
+.left{
+    font-weight: 100;
+}
+.navbar-1 {
+    margin-bottom: 0;
+    background-color: #fff;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+  }
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #fff !important;
+    background-color: #538742!important;
+  }
 h1{
     color:#538742;
     text-align: center;
@@ -97,6 +113,16 @@ h1{
 		padding:auto;
 		float:left;
     }
+    .logo{
+        width:  140px;
+    }
+    
+    .left{
+        min-width: 100%;
+    }
+    .right{
+        min-width: 100%;
+    }
 }
 @media (min-width: 768px) and (max-width: 992px){
 	.box1{
@@ -109,10 +135,13 @@ h1{
 		font-size:20px;
 	}
     .sliders{
-        width: 50%;
+        width: 100%;
         height: 400px;
 		float:left;
 		padding:auto;
+    }
+    .vision-desc{
+        width: 100%;
     }
 }
 @media (min-width: 576px) and (max-width: 768px){
@@ -126,6 +155,19 @@ h1{
         height: 400px;
 		float:left;
 		padding:2%;
+    }
+    .logo{
+        width:  140px;
+    }
+    .left{
+        min-width: 100%;
+        padding-right: 8%;
+        padding-left: 8%;
+    }
+    .right{
+        min-width: 100%;
+        padding-right: 8%;
+        padding-left: 8%;
     }
 }
 
@@ -150,6 +192,15 @@ h1{
 .vision-desc{
     font-size: 25px;
 }
+
+.left{
+    width: 100%;
+    padding: 5%;
+}
+.right{
+    padding: 5%;
+    width: 100%;
+}
 }
 .footer {
     position: relative;
@@ -157,6 +208,7 @@ h1{
     background-color: #2d2d30;
     color: #f5f5f5;
     padding: 32px;
+    font-weight: 400;
   }
   
   .footer a {
@@ -164,6 +216,6 @@ h1{
   }
   
   .footer a:hover {
-    color: #777;
+    color: #538742;
     text-decoration: none;
   }
