--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 }
 .team .card{
     width: 25%;
-    height: 700px;
+    /* height: 700px; */
 	float:left;
 	padding:0px 15px;
     /* background-image: linear-gradient(170deg,#ffffff,#78b122); */
@@ -49,7 +49,7 @@ body{
     position: relative;
     border-radius: 5px;
 	transition: margin 1s ease,box-shadow 1s ease;
-    height: 600px;
+    /* height: 600px; */
     border: none;
 }
 .team .card .box:hover{
@@ -97,7 +97,7 @@ body{
 	
     }
     .team .card .box{
-        height: 400px;
+        /* height: 400px; */
     }
 }
 @media(min-width: 550px)and (max-width: 768px){
@@ -108,7 +108,7 @@ body{
 	    height:100%;
     }
     .team .card .box{
-        height: 400px;
+        /* height: 400px; */
     }
 }
 @media(max-width: 550px){
@@ -118,14 +118,14 @@ body{
 		/* margin-bottom:30px; */
     }
     .team .card .box{
-        height: 400px;
+        /* height: 400px; */
     }
 }
 	@media(min-width: 992px)and (max-width:1200px){
     .team .card{
         /* width: 50%; */
         /* margin-bottom: 30px; */
-		height:450px;;
+		/* height:450px;; */
 	
     }
 }
