--- a/css/product.css
+++ b/css/product.css
@@ -223,18 +223,38 @@ li{
 	.welcome-img{
 		margin-left: auto;
 		margin-right: auto;
-		width: 200px;
+		min-width: 150px;
+	}
+	.welcome-img4{
+		margin-left: auto;
+		margin-right: auto;
+
+		width: 50px;
+	}
+	.welcome-img5{
+		margin-left: auto;
+		margin-right: auto;
+		width: 100px;
 	}
 	.welcome-img2{
 		margin-left: auto;
 		margin-right: auto;
-		width:140px;
+		width:200px;
 	}
 	.air-prod{
 		padding: 30px;
 	}
 	.logo{
 		width: 140px;
+	}
+	.team-head{
+		font-size: 40px;
+	}
+	.team-card{
+		margin-left: 50px;
+		margin-right: 50px;
+		margin-top: 20px;
+		margin-bottom: 20px;
 	}
 }
 
@@ -325,6 +345,12 @@ li{
 		-webkit-box-shadow: inset 0 0 10px #78b122;
 		box-shadow:         inset 0 0 10px #78b122;
 	 }
+	 .team-head{
+		font-size: 50px;
+	}
+	.team-card{
+		min-width: 50%;
+	}
  }
  /* Large devices (desktops, 992px and up) */
  @media (min-width: 768px) and (max-width: 992px) { 
@@ -363,7 +389,9 @@ li{
 	.air-description{
 		padding: 2%;
 	}
-
+	.air-prod{
+		min-width: 100%;
+	}
 	.air-desc{
 		margin-top: auto;
 		margin-bottom: auto;
@@ -401,6 +429,13 @@ li{
 	.prod-image{
 		max-width: 100%;
 		max-width: 100%;
+	}
+	.team-head{
+		font-size: 50px;
+	}
+	.welcome-img2{
+		width: 190px;
+		margin-top: 30px;
 	}
  }
 
@@ -472,6 +507,9 @@ li{
 	}
 	.logo{
 		width: 180px;
+	}
+	.team-head{
+		font-size: 70px;
 	}
  }
 
