--- a/css/pagestyle.css
+++ b/css/pagestyle.css
@@ -24,4 +24,10 @@ body{
     font-family: "Stem"; src: url("//db.onlinewebfonts.com/t/f97196963cd19b4830b860a14bce7a37.eot"); 
 }
 
+.title1
+{
+    text-align: center ;
+    background-color: #538742; 
+    color: white; 
+}
 
