--- a/home.css
+++ b/home.css
@@ -56,9 +56,16 @@
     color: #aaa;
     font-size: 14px;
   }
-  
+  .btn-default{
+    background-color: white;
+    border-color: #78b122;
+    color: #242525;
+    margin-bottom: .5em;
+    letter-spacing: .1em;
+    border-radius: .5em;
+  }
   .panel-footer .btn {
-    margin: 15px 0;
+    margin: 15px 15px;
     background-color: #78b122;
     color: #fff;
   }
@@ -131,7 +138,7 @@
     top: -150px;
     left: 70%;
   }
-
+  
   .footer {
     position: relative;
     top: -100px;
@@ -151,35 +158,35 @@
 
   .navbar {
     margin-bottom: 0;
-    padding-top: 10px;
     background-color: #fff;
+    padding-top: 1.1em;
+    padding-left: 2.5em;
     z-index: 9999;
     border: 0;
     font-size: 12px !important;
     line-height: 1.42857143 !important;
     letter-spacing: 4px;
     border-radius: 0;
+    font-weight: 400;
   }
-  
+  #myNavbar{
+    padding-right: 3.6em;
+  }
   .navbar li a, .navbar .navbar-brand {
-    color: #538742 !important;
+    color: #78b122 !important;
+    font-weight: 400;
+    
   }
   
   .navbar-nav li a:hover, .navbar-nav li.active a {
     color: #fff !important;
     background-color: #538742!important;
+    border-radius: .2em;;
   }
   
   .navbar-default .navbar-toggle {
     border-color: transparent;
     color: #538742 !important;
-  }
-
-  .navbar-brand{
-    width: 10px;
-    height: 10px;
-    position: relative;
-    top: 0px;
   }
 
   .logo {
@@ -276,15 +283,13 @@ body {
   font-family: Montserrat, sans-serif;
 }
 
-.navbar {
-  font-family: Montserrat, sans-serif;
-}
+
 
 h2 {
   font-size: 24px;
   text-transform: uppercase;
-  color: #303030;
-  font-weight: 600;
+  color: #242525;
+  font-weight: normal;
   margin-bottom: 30px;
 }
 
