Fast and shoddy. (This is not my MO)

--- a/home.css
+++ b/home.css
@@ -87,6 +87,10 @@
     background-color: #538742;
   }
   
+  .item {
+    align-items: center;
+  }
+
   .item h4 {
     font-size: 19px;
     line-height: 1.375em;
