--- a/style.css
+++ b/style.css
@@ -44,8 +44,18 @@ nav ul li a{
   font-size: 15px;
   text-transform: uppercase;
   padding: 5px 0;
+  text-decoration: none;
+
+
 
 }
+
+nav ul li a:hover, a:focus {
+  text-decoration: none;
+  color: #098F2E;
+}
+
+
 
 nav ul li a::before{
   position: absolute;
@@ -145,3 +155,14 @@ label #btn,label #cancel{
   top: 0;
   width: 100%;
 }
+
+#product{
+  background: url(img/products.png);
+  background-size: cover;
+    /* background-position: right; */
+    display: flex;
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    min-height: 100vh;
+}
+
