--- a/style.css
+++ b/style.css
@@ -39,7 +39,15 @@ nav ul li a {
   font-size: 15px;
   text-transform: uppercase;
   padding: 5px 0;
+  text-decoration: none;
 }
+
+nav ul li a:hover, a:focus {
+  text-decoration: none;
+  color: #098F2E;
+}
+
+
 
 nav ul li a::before {
   position: absolute;
@@ -153,6 +161,9 @@ label #cancel {
     font-size: 17px;
     color: #ecf7ea;
   }
+  
+
+
   nav ul li a::before {
     background: #ecf7ea;
   }
@@ -193,4 +204,24 @@ label #cancel {
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+#product{
+  background: url(img/products.png);
+  background-size: cover;
+    /* background-position: right; */
+    display: flex;
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    min-height: 100vh;
+}
+
+.heading1{
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 600;
 }
