--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
-  font-family: "Reem Kufi", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 body {
   background: #ecf7ea !important;
@@ -68,7 +68,7 @@ nav ul li a:hover{
 label #btn,
 label #cancel {
   color: #098f2e;
-  font-size: 25x;
+  font-size: 20px;
   float: right;
   line-height: 80px;
   margin-right: 40px;
@@ -79,6 +79,9 @@ label #cancel {
 #check {
   display: none;
 }
+/* ------------------------- */
+
+
 
 .home {
   display: flex;
@@ -93,11 +96,13 @@ label #cancel {
 }
 
 .text img {
+
   margin-left: -15px;
 }
 
 .bg_image1 img {
   float: right;
+  /* width: 100%; */
 }
 
 .vision {
@@ -110,6 +115,7 @@ label #cancel {
 
 .vision p {
   margin-right: 10%;
+  /* font-weight: 300; */
 }
 
 .bg_image2 img {
@@ -206,7 +212,7 @@ video {
 .bg {
   background-image: url("./img/contact_bg.png");
   background-repeat: no-repeat;
-  background-size: 100% 50%;
+  background-size: 100% 75%;
   background-position: bottom;
 }
 
@@ -256,7 +262,7 @@ video {
     line-height: 30px;
   }
   nav ul li a {
-    font-size: 17px;
+    font-size: 20px;
     color: #ecf7ea;
   }
   nav ul li a::before {
@@ -283,10 +289,17 @@ video {
   }
 
   .text img {
+    margin-top: 20%;
     width: 50%;
+    
     height: auto;
     margin-left: -10px;
   }
+  .text{
+    text-align: center;
+  }
+
+  
 
   .bg_image1 img,
   .bg_image2 img {
@@ -353,26 +366,23 @@ header {
 
 .carousel-item{
   background-color: rgba(49, 71, 46, 0.58);
- /* width: 300px; */
-  height: 60vh;
+  height: 70vh;
   border-radius: 20px;
   text-align: center;
 
 }
 
 .carousel{
-  /* align-items: center;
-  justify-content: center; */
+
   margin-left: 15%;
 border-radius: 20px;
   margin-right: 15%;
-  /* width: 100%; */
 }
 
 .heading2{
-  margin-top: 3%;
-  font-size: 10 !important;
-  /* text-transform: uppercase; */
+  /* margin-top: 3%; */
+  padding-top: 3%;
+  font-size: 7vh !important;
 }
 
 .column {
@@ -385,15 +395,15 @@ border-radius: 20px;
   text-align: left;
 }
 
-/* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 .column img{
-height: 30vh;
-padding-right: 10%;
+height: 33vh !important;
+padding-right: 10% ;
+padding-left: 10%;
 padding-top: 8%;
 }
 
@@ -411,3 +421,381 @@ padding-top: 8%;
 @media (max-width: 860px) {
   
 }
+
+
+
+.contact .heading{
+  text-align: center;
+  color: white;
+
+}
+.contact{
+  padding-bottom: 20px;
+}
+
+
+
+
+
+
+input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
+  font-size: 0.55em;
+  color: #098f2e;
+  top: -5px;
+  -webkit-transition: all 0.225s ease;
+  transition: all 0.225s ease;
+}
+
+.styled-input {
+  float: left;
+  width: 293px;
+  margin: 1rem 0;
+  position: relative;
+  border-radius: 4px;
+}
+
+@media only screen and (max-width: 768px){
+  .styled-input {
+      width:100%;
+  }
+}
+
+
+
+.styled-input label {
+  color: #098f2e;
+  padding: 0.5rem 30px 0.5rem 30px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  pointer-events: none;
+}
+
+.styled-input.wide { 
+  width: 650px;
+  max-width: 100%;
+}
+
+input,
+textarea {
+  padding: 20px;
+  border: 0;
+  width: 100%;
+  font-size: 1rem;
+  background-color: white;
+  color: #098f2e;
+  border-radius: 4px;
+}
+
+input:focus,
+textarea:focus { outline: 0; }
+
+input:focus ~ span,
+textarea:focus ~ span {
+  width: 100%;
+  -webkit-transition: all 0.075s ease;
+  transition: all 0.075s ease;
+}
+
+textarea {
+  width: 100%;
+  min-height: 15em;
+}
+
+.input-container {
+  width: 650px;
+  max-width: 100%;
+  margin: 20px auto 25px auto;
+}
+
+.submit-btn {
+  /* float: right; */
+  /* align-self: center; */
+  padding: 7px 35px;
+  border-radius: 5px;
+  display: inline-block;
+  background-color: #C2EAB4;
+  color: #098f2e;
+  text-transform: uppercase;
+  font-size: 13px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
+            0 2px 10px 0 rgba(0,0,0,0.07);
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+
+.submit-btn:hover {
+  transform: translateY(1px);
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.10),
+            0 1px 1px 0 rgba(0,0,0,0.09);
+}
+
+@media (max-width: 768px) {
+  .submit-btn {
+      width:auto;
+      /* margin-right: 10% ; */
+      margin-left: 10%;
+      /* float: center; */
+      text-align:center;
+      align-self: center;
+  }
+  .contact .heading{
+    font-size: 40px;
+  }
+  .contact .row .para{
+    font-size: 1em;
+  }
+  /* textarea{
+
+    margin-left: 10%;
+    margin-right: 20% !important;
+
+  } */
+  /* input{
+    margin-left: 10%;
+    margin-right: 20% !important;
+
+  } */
+  .styled-input label{
+    padding-left: 10%;
+  }
+  .container{
+    margin-right: 17%;
+    margin-left: 10%;
+  }
+}
+
+input[type=checkbox] + label {
+color: #ccc;
+font-style: italic;
+} 
+
+input[type=checkbox]:checked + label {
+color: #f00;
+font-style: normal;
+}
+
+.contact .para{
+  color: white;
+  font-size: 1.25em;
+}
+
+.footer-distributed {
+  background-color: #ecf7ea;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 25px 50px;
+}
+
+.footer-distributed .footer-left p {
+  color: #098f2e;
+  font-size: 14px;
+  margin: 0;
+}
+/* Footer links */
+
+.footer-distributed p.footer-links {
+  font-size: 18px;
+  font-weight: 700;
+  color: #098f2e;
+  margin: 0 0 10px;
+  padding: 0;
+  transition: ease .25s;
+  
+}
+
+.footer-distributed p.footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+  transition: ease .25s;
+}
+
+.footer-distributed .footer-links a:before {
+  content: "·";
+  font-size: 20px;
+  left: 0;
+  color: #fff;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+
+.footer-distributed .footer-right {
+  float: right;
+  margin-top: 6px;
+  max-width: 180px;
+}
+
+.footer-distributed .footer-right a {
+  display: inline-block;
+  text-decoration: none;
+  width: 35px;
+  height: 35px;
+  background-color: #098f2e;
+  border-radius: 5px;
+  font-size: 20px;
+  color: #ecf7ea;
+  text-align: center;
+  line-height: 35px;
+  margin-left: 3px;
+  transition:all .25s;
+}
+
+.footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
+
+.footer-distributed p.footer-links a:hover{text-decoration:none;}
+
+/* Media Queries */
+
+@media (max-width: 600px) {
+  .footer-distributed .footer-left, .footer-distributed .footer-right {
+    text-align: center;
+  }
+  .footer-distributed .footer-right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+  .footer-distributed .footer-left p.footer-links {
+    line-height: 1.8;
+  }
+}
+
+
+.carousel {
+  position: relative;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+  margin-top: 26px;
+}
+
+.carousel-inner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.carousel-open:checked + .carousel-item {
+  position: static;
+  opacity: 100;
+}
+
+.carousel-item {
+  position: absolute;
+  opacity: 0;
+  -webkit-transition: opacity 0.6s ease-out;
+  transition: opacity 0.6s ease-out;
+}
+
+.carousel-item img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+.carousel-control {
+  background: rgba(0, 0, 0, 0.28);
+  border-radius: 50%;
+  margin-top: 20%;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  font-size: 40px;
+  height: 40px;
+  line-height: 35px;
+  position: absolute;
+  /* top: 50%; */
+  -webkit-transform: translate(0, -50%);
+  cursor: pointer;
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  text-align: center;
+  width: 40px;
+  /* z-index: 10; */
+}
+
+.carousel-control.prev {
+  left: 2%;
+}
+
+.carousel-control.next {
+  right: 2%;
+}
+
+.carousel-control:hover {
+  background: rgba(0, 0, 0, 0.8);
+  /* color: #aaaaaa; */
+}
+
+#carousel-1:checked ~ .control-1,
+#carousel-2:checked ~ .control-2,
+#carousel-3:checked ~ .control-3 {
+  display: block;
+}
+
+.carousel-indicators {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 2%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 10;
+}
+
+.carousel-indicators li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.carousel-bullet {
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 35px;
+}
+
+.carousel-bullet:hover {
+  color: #aaaaaa;
+}
+
+#carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
+#carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
+#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+  color: #428bca;
+}
+
+#title {
+  width: 100%;
+  position: absolute;
+  padding: 0px;
+  margin: 0px auto;
+  text-align: center;
+  font-size: 27px;
+  color: rgba(255, 255, 255, 1);
+  font-family: 'Open Sans', sans-serif;
+  z-index: 9999;
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
+}
+
+
+
+
+
+
+
+
+
+
+
